Usage of type inference and update to Junit 5